--- a/platformio.ini
+++ b/platformio.ini
@@ -5,10 +5,7 @@
 platform = espressif32
 framework = arduino
 
-; The current arduino-ESP32 platform (2.0.3) seems to have issues with
-; esp_sleep_get_wakeup_cause() not working right, leading to boot loops.
-; Pin to the previous version (2.0.2) which works better, temp compile fix.
-platform_packages = framework-arduinoespressif32 @ 3.20011.230801
+platform_packages = framework-arduinoespressif32 @ 3.20017.241212+sha.dcc1105b
 board = esp32dev  ; TODO: Make a board definition for Watchy?
 board_build.partitions = min_spiffs.csv
 board_build.hwids = 10C4, EA60  ; The CP2102N used on Watchy
@@ -16,9 +13,9 @@ monitor_speed = 115200
 
 lib_ldf_mode = deep+  ; Needed to plumb the depths of library dependencies
 lib_deps =
-    https://github.com/tzapu/WiFiManager.git
-    https://github.com/orbitalair/Rtc_Pcf8563.git @ 1.0.3
-    sqfmi/Watchy
+    https://github.com/tzapu/WiFiManager.git @ 2.0.17
+    https://github.com/GuruSR/Older_Rtc_Pcf8563
+    sqfmi/Watchy @ 1.4.14
 
 ;;; For debugging, try these
 ; build_type = debug
